version/0.19/_sources/api/solver/_autosummary/settings/cross_section_multicomponent.rst.txt
:orphan:

.. _cross_section_multicomponent:

cross_section_multicomponent
============================

.. autoclass:: ansys.fluent.core.solver.settings_241.cross_section_multicomponent.cross_section_multicomponent
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`cross_section_multicomponent_child <cross_section_multicomponent_child>`


.. rubric:: Included in:

========================================================   ====================================

Parent                                                                                  Summary

========================================================   ====================================
:ref:`collision_cross_section <collision_cross_section>`       'collision_cross_section' child.

========================================================   ====================================

